Revision history for Dist-Zilla-Plugin-Dpkg-PerlbrewStarman

{{$NEXT}}

0.07 Jan 20 2012

0.06 Jan 9 2012
  - Define APPLIB in defaults so restart works. (thanks Mike Eldridge)

0.05 Jan 4 2012
  - Fix bits of the postrm that weren't removing correctly

0.04 Dec 28 2011
  - Fix typo in path name

0.03 Dec 21 2011
  - Add starman_port

0.02 Dec 21 2011

0.01
  - First version, released on an unsuspecting world.
