@@ -4,7 +4,7 @@ Dist::Zilla::Plugin::Dpkg::PerlbrewStarman - Generate dpkg files for your perlbr
 
 # VERSION
 
-version 0.06
+version 0.07
 
 # SYNOPSIS
 
@@ -42,6 +42,11 @@ This module provides defaults for the following attribute:
 ## starman_port
 
 The port to use for starman.
+
+## startup_time
+
+The amount of time (in seconds) that the init script will wait on startup. Some
+applications may require more than the default amount of time (30 seconds).
 
 # AUTHOR
 
